@@ -212,6 +212,14 @@
 					<groupId>org.eclipse.jetty</groupId>
 					<artifactId>jetty-servlet</artifactId>
 				</exclusion>
+				<exclusion> 
+			        <groupId>org.slf4j</groupId>
+			        <artifactId>slf4j-log4j12</artifactId>
+			    </exclusion>
+			    <exclusion> 
+			        <groupId>log4j</groupId>
+			        <artifactId>log4j</artifactId>
+			    </exclusion>
 			</exclusions>
 		</dependency>
 
@@ -250,6 +258,14 @@
 					<groupId>org.xerial</groupId>
 					<artifactId>sqlite-jdbc</artifactId>
 				</exclusion>
+				<exclusion> 
+			        <groupId>org.slf4j</groupId>
+			        <artifactId>slf4j-log4j12</artifactId>
+			    </exclusion>
+			    <exclusion> 
+			        <groupId>org.apache.logging.log4j</groupId>
+			        <artifactId>log4j-slf4j-impl</artifactId>
+			    </exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
