@@ -1,5 +1,10 @@
 -- EM: modified from Michael Hanl version
 
+CREATE TABLE IF NOT EXISTS oauth2_client_url (
+	url_hashcode INTEGER PRIMARY KEY NOT NULL,	
+	url TEXT DEFAULT NULL	
+);
+
 -- oauth2 db tables
 CREATE TABLE IF NOT EXISTS oauth2_client (
 	id VARCHAR(100) PRIMARY KEY NOT NULL,
@@ -7,15 +12,15 @@ CREATE TABLE IF NOT EXISTS oauth2_client (
 	secret VARCHAR(255) DEFAULT NULL,
 	type VARCHAR(255) NOT NULL,
 	native BOOLEAN DEFAULT FALSE,
-	url TEXT DEFAULT NULL,
-	url_hashcode INTEGER,
 	redirect_uri TEXT DEFAULT NULL,
 	description VARCHAR(255) NOT NULL,
-	registered_by VARCHAR(100) NOT NULL
+	registered_by VARCHAR(100) NOT NULL,
+	url_id INTEGER,
+	FOREIGN KEY (url_id)
+	   REFERENCES oauth2_client_url(url_hashcode)
 );
 
 CREATE UNIQUE INDEX client_id_index on oauth2_client(id);
-CREATE UNIQUE INDEX client_url_index on oauth2_client(url_hashcode);
 
 CREATE TABLE IF NOT EXISTS oauth2_authorization (
 	id INTEGER PRIMARY KEY AUTOINCREMENT,
