@@ -4,7 +4,6 @@ import static org.junit.Assert.assertEquals;
 
 import java.util.Iterator;
 import java.util.List;
-import java.util.Set;
 
 import org.junit.Rule;
 import org.junit.Test;
